<resources>
    <string name="app_name">IRONTITAN-X</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="or_login">or Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="home">Home</string>
    <string name="calories">Calories</string>
    <string name="search">Search for nearby gyms</string>
    <string name="remaining_calories">1680\nRemaining</string>
    <string name="assistant">Personal Assistant</string>
    <string name="message">Type a message…</string>
    <string name="app_logo">App Logo</string>
    <string name="goals">Goals</string>
    <string name="ps_you_can_t_select_lose_weight_and_ngain_weight_at_the_same_time">PS: You can\'t select lose weight and\ngain weight at the same time</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="gain_muscle">Gain Muscle</string>
    <string name="red_tab">red tab</string>
    <string name="grey_tab">grey tab</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="modify_diet">Modify Diet</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="what_is_your_activity_level">What is your activity level?</string>
    <string name="no_activity">No Activity</string>
    <string name="light_activity">Lightly Active</string>
    <string name="active">Active</string>
    <string name="highly_active">Highly Active</string>
    <string name="you">You</string>
    <string name="please_answer_the_following_questions_for_nmore_accurate_results">Please answer the following questions for\nmore accurate results:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="target_weight">Target Weight</string>
    <string name="plan">Plan</string>
    <string name="please_choose_the_package_you_like">Please choose the package you like:</string>
    <string name="crown">Crown</string>
    <string name="premium">Premium</string>
    <string name="_19_99">$19.99</string>
    <string name="standard">Standard</string>
    <string name="free">Free</string>
    <string name="select_goal">Select Goal</string>
    <string name="change_password">Change Password</string>
    <string name="please_enter_your_email_to_change_your_password">Please enter your email to change your password</string>
    <string name="send_email">Send Email</string>
    <string name="fitness">fitness</string>
    <string name="food">food</string>
    <string name="more">more</string>
    <string name="logout">Logout</string>
    <string name="changePlan">Change Goals</string>
    <string name="settings">Settings</string>
    <string name="changeProfile">Change Profile</string>
    <string name="user_message">User message</string>
    <string name="profile">Profile</string>
    <string name="notification">notification</string>
    <string name="calories_burnt">Calories burnt</string>
    <string name="_0_6_4l">0.6/4L</string>
    <string name="search_for_near_by_gyms">Search for near by gyms</string>
    <string name="discover">Discover</string>
    <string name="chat_bot">Chat Bot</string>
    <string name="_16">16</string>
    <string name="water_intake">Water Intake</string>
    <string name="upgrade_to_premium">Upgrade To premium</string>
    <string name="chatbot">Chatbot</string>
    <string name="upgrade_to_npremium">Upgrade to\npremium</string>
    <string name="back_button">back button</string>
    <string name="chatbot_icon">Chatbot Icon</string>
    <string name="send_button">send button</string>
    <string name="select_muscle">Select muscle</string>
    <string name="search_hint_exercise">Search for an exercise</string>
    <string name="add">Add</string>
    <string name="play_button">Play button</string>
    <string name="select_video">Select video</string>
    <string name="bicep_curls_dumbbell_or_barbell">Bicep curls (Dumbbell or Barbell)</string>
    <string name="meals_tracker">Meals Tracker</string>
    <string name="ready_plans">Ready Plans</string>
    <string name="customize">Customize</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="create_plan">Create Plan</string>
    <string name="add_to_my_plans">Add to my Plans</string>
    <string name="please_tell_us_a_bit_about_yourself">Please tell us a bit about yourself</string>
    <string name="goal">Goal:</string>
    <string name="activeness">Activeness:</string>
    <string name="nearby_gyms">Nearby Gyms</string>
    <string-array name="goal_options">
        <item>Lose weight</item>
        <item>Gain weight</item>
        <item>Maintain weight</item>
        <item>Modify diet</item>
    </string-array>
    <string-array name="activity_options">
        <item>No activity</item>
        <item>Light activity</item>
        <item>Active</item>
        <item>Highly active</item>
    </string-array>
    <string name="save_changes">Save Changes</string>
    <string name="plan_name">Plan Name</string>
    <string name="remove_exercise">Remove_exercise</string>
    <string name="my_plans">My plans</string>
</resources>