<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userInfo"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/you"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:contentDescription="@string/red_tab"
            android:src="@drawable/goals_tab_red" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:contentDescription="@string/grey_tab"
            android:src="@drawable/goals_tab_grey" />
    </TableRow>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/please_tell_us_a_bit_about_yourself"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <RadioGroup
        android:id="@+id/toggle"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/switch_track"
        android:checkedButton="@+id/female"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/switch_thumb"
            android:button="@null"
            android:gravity="center"
            android:text="@string/male"
            android:textSize="16sp"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/switch_thumb"
            android:button="@null"
            android:gravity="center"
            android:text="@string/female"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:checked="true"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/goal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toggle"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="40dp"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinnerGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:backgroundTint="@color/grey"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/goal_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="40dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activeness"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinnerActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:backgroundTint="@color/grey"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/activity_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="40dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/weight"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/custom_edit_text_rounded"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:paddingHorizontal="10dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/height"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/custom_edit_text_rounded"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:padding="15dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>
    </LinearLayout>


    <Button
        android:id="@+id/age_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/grey"
        android:text="@string/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_fields" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="@color/red"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>